@@ -35,6 +35,7 @@ requires:
   IO::Barf: 0
   MARC::File::XML: 1.0.4
   MARC::Validator: 0.06
+  MARC::Validator::Filter: 0
   Unicode::UTF8: 0
   perl: 5.6.0
 resources:
