@@ -1,4 +1,5 @@
 0.05
+ - Add -f option to list of filter plugins.
  - Add ACKNOWLEDGEMENTS section to doc.
  - Update copyright years.
 
